<resources>
    <string name="app_name">ИТО</string>
    <string name="test_name">ИНДИВИДУАЛЬНЫЙ-ТИПОЛОГИЧЕСКИЙ ОПРОСНИК</string>
    <string name="description">Индивидуальныо-типологический опросник (ИТО) – оригинальная психодиагностическая методика, разработанная Людмилой Николаевной Собчик на основе собственной теории ведущих тенденций. Эти способы определены 10 шкалами.</string>
    <string name="create_account"><u>Я хочу создать аккаунт</u></string>
    <string name="time_test">7 минут</string>
    <string name="vopros_kol">61 вопросов</string>
    <string name="quest">Хотите пройти тест?</string>
    <string name="personal">ПРОФИЛЬ</string>
    <string name="test">ТЕСТ</string>
    <string name="email">ВАШ EMAIL</string>
    <string name="password">ВАШ ПАРОЛЬ</string>
    <string name="autorization">ВХОД</string>
    <string name="login">Войти</string>
    <string name="registration">РЕГИСТРАЦИЯ</string>
    <string name="name">ИМЯ</string>
    <string name="noAccount">У меня нет аккаунта</string>
    <string name="reset_password">Я ЗАБЫЛ ПАРОЛЬ</string>
    <string name="gender_check">ПОЛ</string>
    <string name="register">Создать аккаунт</string>
    <string name="infoAccount">Для чего нужен аккаунт?</string>
    <string name="my_personal">ПРОФИЛЬ</string>
    <string name="edit_personal">Изменить профиль</string>
    <string name="result">Посмотреть статистику</string>
    <string name="logout">Выйти</string>
    <string name="no">Нет</string>
    <string name="statistic">СТАТИСТИКА</string>
    <string name="test_desc_header">Описание теста</string>
    <string name="next">Далее</string>
    <string name="diagram_result">ДИАГРАММА РЕЗУЛЬТАТОВ</string>
    <string name="go_test">Начать тест</string>

    <string name="delimiter">*****************************************</string>
    <string name="typesDescription">Описание психотипов</string>
    <string name="lowerStres">1. Экстраверсия - высокие оценки по шкале экстраверсии соответствуют избыточной общительности, которая мешает целенаправленности действий, повышенной отвлекаемости, болтливости, при избыточном количестве друзей и знакомых контакты остаются поверхностными, неглубокими (много знакомых – мало настоящих друзей).</string>
    <string name="selfApproval">2. Спонтанность - высокие показатели шкалы спонтанности характерны для ребят с выраженной раскованностью, склонностью к свободному самоутверждению, стремящихся к лидированию или, по крайней мере, к независимости. Любые режимные рамки, стесняющие их свободу, вызывают противодействие и стремление к свободе.</string>
    <string name="selfJustification">3. Агрессивность - повышенные результаты по шкале агрессивности (стеничности) – 4–5 баллов, напротив, говорит о выраженной уверенности в себе, стремлении к самоутверждению, двигательной активности и самостоятельности при низкой подчиняемости, а при высоких баллах (6 баллов) указывают на избыточную активность, импульсивное поведение при низкой подчиняемости, небрежность в выполнении заданий, склонность к прогулам и агрессивным поступкам, вплоть до явных злобных хулиганских действий.</string>
    <string name="distraction">"4. Ригидность - высокие показателя по шкале ригидности характерны для ребят с выраженным упорством (если это касается достижения цели) и упрямством (если это проявляется в отстаивании своей точки зрения). Им чрезвычайно важен собственный статус: как с позиций главенства, власти, так и с точки зрения материального благополучия. "</string>
    <string name="substitution">5. Интроверсия - напротив, ребята с выраженной шкалой интроверсии отличаются молчаливостью, замкнутостью, отгороженностью. Они очень избирательны в выборе друзей, зато постоянны в своих привязанностях. Вдумчивы при изучении тех предметов, которые оцениваются ими как любимые. Материал ими усваивается лучше, когда они в одиночестве.</string>
    <string name="selfAffirmation">6. Сензитивность - шкала сензитивности выделяется у ребят с выраженной впечатлительностью, чрезвычайно ранимых, обидчивых, склонных при неудачах давать депрессивные реакции. У них выражено стремление преувеличивать свою вину в случившемся.</string>
    <string name="psychomuscularRelaxation">7. Тревожность - высокие показатели по шкале тревожности выявляют тип личности с повышенной тревожностью, и свидетельствуют о преобладании таких черт характера, как нерешительность, выраженное чувство ответственности, внутренняя потребность в соответствии требованиям окружения – преподавателей, родителей, класса, мнительность, боязливость, склонность к необоснованным страхам.</string>
    <string name="controllOverSituation">8. Лабильность - шкала лабильности при высоких показателях отражает выраженную эмоциональную неустойчивость (лабильность, подвижность). Это дети, у которых настроение легко меняется – от избыточной веселости, болтливости, смешливости до резко пониженного настроения со слезами, с бурными реакциями огорчения, сопровождающимися вегетативными проявлениями – покраснение лица, головные и другие боли, учащение пульса, повышение температуры, обмороки, судорожные подергивания, тошнота и рвота.</string>
    <string name="selfControll">9. Искренность - если по шкале «ложь» (неискренность) подсчитано более 4-х баллов – данные недостоверны</string>
    <string name="positiveSelfMotication">10. Аггравация - если по шкале «аггравация» (подчеркивание проблем) – более 4-х баллов, то черты характера подчеркиваются, преувеличиваются.</string>
    <string name="birthday">ДАТА РОЖДЕНИЯ</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>

    <string name="test_description">
        Предлагаем пройти тест на акцентуацию характера, или опросник Шмишека, и узнать, какие типы акцентуации выражены у вас наиболее ярко.
        Как и следует из названия теста, опросник был разработан Шмишеком на основе выделенных Леонгардом доминирующих черт характера при том или ином типе.
        Данный тест на акцентуацию состоит из 88 вопросов, касающихся 10 типов акцентуаций.
    </string>
    <string name="instruction">Прочтите внимательно каждое предложение, и оцените, насколько то, что в каждом из них утверждается, соответствует тому, что вы обычно думаете, делаете, переживаете, когда кто-то или что-то вывело вас из состояния равновесия, или вам что-либо вредит. На свой ответ нужно нажать, после чего у Вас появится кнопка перехода на следующий вопрос</string>
    <string name="email_forgot_pass">МЫ ВЫШЛЕМ НОВЫЙ ПАРОЛЬ НА ВАШУ ПОЧТУ:</string>
    <string name="send">Выслать новый пароль</string>
    <string name="edit_profile">РЕДАКТИРОВАТЬ ПРОФИЛЬ</string>
    <string name="old_password">СТАРЫЙ ПАРОЛЬ</string>
    <string name="repeat_new_password">ПОВТОРИТЕ НОВЫЙ ПАРОЛЬ</string>
    <string name="new_password">НОВЫЙ ПАРОЛЬ</string>
    <string name="save">Сохранить</string>
    <string name="repeat_password">ПОВТОРИТЕ ПАРОЛЬ</string>
    <string name="incorrect">Неверный логин или пароль</string>
    <string name="successfully">Авторизаця успешна</string>
    <string name="enter_email_password">Введите email и пароль</string>
    <string name="length_password">Пароль должен быть длиннее 8 символов</string>
    <string name="password_successfully">Пароль успешно изменен</string>
    <string name="opassword_incorrect">Старый пароль неверен</string>
    <string name="match_password">Пароли должны совпадать</string>
    <string name="opassword_and_npassword">Введите старый пароль и новый пароль 2 раза</string>
    <string name="user_not_found">Пользователь с таким email не найден</string>
    <string name="new_password_email">Новый пароль отправлен Вам на почту</string>
    <string name="enter_email">Введите email</string>
    <string name="quit_app">Вы уверены, что хотите выйти?</string>
    <string name="quit_profile">Вы уверены, что хотите выйти из личного кабинета?</string>
    <string name="time">Время вышло</string>
    <string name="questio">Вопрос</string>
    <string name="time_test_new">Время на проходение опроса вышло. Начните с начала</string>
    <string name="ok">Ок</string>
    <string name="in_result">К результатам</string>
    <string name="answer_saved">Ваш ответ сохранён</string>
    <string name="quit_test">Вы уверены, что хотите завершить тест?</string>
    <string name="fields_required">Все поля обязательны для заполнения</string>
    <string name="incorrect_email">Вы ввели некорректный email</string>
    <string name="successfully_registered">Вы успешно зарегестрированы</string>
    <string name="fail_auth">Ошибка авторизации</string>
    <string name="lang">RU</string>
    <string name="test_name_two">ПРЕОДОЛЕНИЕ ТРУДНЫХ ЖИЗНЕННЫХ СИТУАЦИЙ</string>
    <string name="never_answer">Никогда</string>
    <string name="yes">Да</string>
    <string name="rare_answer">Редко</string>
    <string name="often_answer">Часто</string>
    <string name="very_often_answer">Очень часто</string>
    <string name="always_answer">Всегда</string>
    <string name="answer_disc">Когда мне кто-либо или что-либо вредит (наносит ущерб,стесняет), выводит из состояния психического равновесия, то я...</string>
    <string name="screen_name">ПРЕОДОЛЕНИЕ ТРУДНЫХ ЖИЗНЕННЫХ СИТУАЦИЙ</string>
</resources>